# smtr

./: .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
